# http-interface

./: CMakeLists.txt  Dockerfile  Makefile  README.md  chart.h  displayer.cpp  displayer.h  html.h  job.h  main.cpp
example/: CMakeLists.txt  main.cpp
http-interface/: CMakeLists.txt  Makefile  chart.cpp  chart.h  displayer.cpp  displayer.h  job.cpp  job.h  main.cpp
httpi/: CMakeLists.txt  chart.cpp  chart.h  displayer.cpp  displayer.h  html.h  job.cpp  job.h  main.cpp  monitoring.cpp  rest-helpers.h  webjob.h
httpi/html/: chart.cpp  form-gen.cpp  form-gen.h  utils.h
src/: CMakeLists.txt
src/httpi/: displayer.cpp  displayer.h  html-for-jobs.cpp  job.h  job_test.cpp  monitoring.cpp  monitoring.h  rest-helpers.h  webjob.h
src/httpi/html/: chart.h  form-gen.cpp  html.h  json.h  utils.h
